Se añade el buscador y botones, aparte se implementa javascript para activar y desactivar la clase active (que tiene el mismo efecto del hover), pero la diferencia es que cuando se clickea permanece activo, y cuando se clickea sobre otro elemento del body, se desactiva el efecto

--- a/clon-de-google/index.html
+++ b/clon-de-google/index.html
@@ -27,7 +27,21 @@
         <picture>
             <img src="img/google-logo.png" alt="Logo de Google">
         </picture>
+        <div class="buscador__container">
+            <picture class="container__img">
+                <img src="/clon-de-google/img/buscar-icon.svg" alt="Icono de buscar">
+            </picture>
+            <input type="text" class="buscador__container--ipt">
+            <picture class="container__img">
+                <img src="/clon-de-google/img/microfono.svg" alt="Icono de microfono">
+            </picture>
+        </div>
+        <div class="botones__container">
+            <input type="submit" value="Buscar con Google">
+            <input type="submit" value="Me siento con suerte">
+        </div>
     </main>
     <footer></footer>
+    <script src="./js/main.js"></script>
 </body>
 </html>
