--- a/clon-de-google/index.html
+++ b/clon-de-google/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clon de Google</title>
-    <link rel="stylesheet" href="/clon-de-google/css/style-mobile.css">
+    <link rel="stylesheet" href="/css/style-mobile.css">
     <!-- <link rel="stylesheet" href="/styles/tablet-45.css" media="screen and (min-width: 600px)">
     <link rel="stylesheet" href="/styles/desktop-45.css" media="screen and (min-width: 800px)"> -->
 </head>
@@ -29,19 +29,41 @@
         </picture>
         <div class="buscador__container">
             <picture class="container__img">
-                <img src="/clon-de-google/img/buscar-icon.svg" alt="Icono de buscar">
+                <img src="/img/buscar-icon.svg" alt="Icono de buscar">
             </picture>
             <input type="text" class="buscador__container--ipt">
             <picture class="container__img">
-                <img src="/clon-de-google/img/microfono.svg" alt="Icono de microfono">
+                <img src="/img/microfono.svg" alt="Icono de microfono">
             </picture>
         </div>
         <div class="botones__container">
             <input type="submit" value="Buscar con Google">
             <input type="submit" value="Me siento con suerte">
         </div>
+
+       <div class="bottom__container">
+           <p>Ofrecido por Google en: <a href="">English</a></p>
+       </div>
+
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <section class="footer__first-container">
+            <p class="paragraph">Costa Rica</p>
+        </section>
+        <div class="footer__container-options">
+            <section class="footer__second-container">
+                <a href="">Sobre Google</a>
+                <a href="">Publicidad</a>
+                <a href="">Negocios</a>
+                <a href="">Cómo funciona la Búsqueda</a>
+            </section>
+            <section class="footer__third-container">
+                <a href="">Privacidad</a>
+                <a href="">Condiciones</a>
+                <a href="">Preferencias</a>
+            </section>
+        </div>
+    </footer>
     <script src="./js/main.js"></script>
 </body>
 </html>
