Se anade un mensaje aclaratorio en el footer de Ecu-pagina

--- a/ECU-Pagina/index.html
+++ b/ECU-Pagina/index.html
@@ -141,7 +141,7 @@
             <li><a href=""><img src="images/instagram.svg" alt=""><span class="text-list">Instagram</span></a></li>
             <li><a href="https://wa.me/+50688888888"><img src="images/whatsapp.svg" alt=""><span class="text-list">WhatsApp</span></a></li>
         </ul>
-        <p class="footer-paragraph">Creadores Imágen y página desarrollada por estudiantes del movimiento durante el 2020 y 2021. Maribel Víctor</p>
+        <p class="footer-paragraph">Creadores Imágen y página desarrollada por estudiantes del movimiento durante el 2020 y 2021. Maribel Víctor. Esta página es solo un ejemplo de práctica de Jonathan Rugama</p>
     </footer>
     <script src="/js/menu.js"></script>
 </body>
