Se termina de maquetar la barra de navegacion

--- a/clon-de-google-v2/index.html
+++ b/clon-de-google-v2/index.html
@@ -10,18 +10,20 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="nav-right-section">
                 <li>
                     <a href="">Gmail</a>
                 </li>
                 <li>
                     <a href="">Imágenes</a>
                 </li>
-                <li>
-                    <a href="">Icon</a>
+                <li class="menu-icon">
+                    <a href=""></a>
                 </li>
                 <li>
-                    <a href="">Photo</a>
+                    <a href="">
+                        <img src="https://lh3.googleusercontent.com/ogw/ADGmqu86SpY096964fsdr3L7oc7dDpmp1OcQRBzSlUnII_0=s32-c-mo" alt="">
+                    </a>
                 </li>
             </ul>
         </nav>
